<resources>
    <string name="app_name">Water Reporter</string>
    <string name="terrainMapId">developedsimple.mf7anga9</string>
    <string name="mapBoxToken">pk.eyJ1IjoicmRhd2VzMSIsImEiOiJjaXJjZnJiOWIwMWV5Z2FtOW5mMW1wY3R1In0.RPLkxmfkLS4Tt0iiX0MldA</string>
    <string name="facebook_app_id">409059752790536</string>
    <string name="title_activity_submissions">My Submissions</string>
    <string name="action_legend">Legend</string>
    <string name="action_submissions">My Submissions</string>
    <string name="action_report">Make A Report</string>
    <string name="title_activity_submission_detail">Submission Detail</string>
    <string name="title_activity_report">Submit report</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_legend">Legend</string>
    <string name="date_hint">Enter Date</string>
    <string name="incident_hint">Incident Type</string>
    <string name="facility_hint">Facility Type</string>
    <string name="legend_header">Legend</string>
    <string name="marker_header">General Oil &amp; Gas Report</string>
    <string name="title_activity_marker">Report</string>
    <string name="location_prompt">Choose a location</string>
    <string name="issue_prompt">Choose an issue</string>
    <string name="facility_prompt">Choose a facility</string>
    <string name="date_button_text">Enter Date</string>
    <string name="album_name">WaterReporter</string>
    <string name="save">Save</string>
    <string name="title_activity_map">Set location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_photo_preview">PhotoPreview</string>
    <string name="title_activity_photo">Add photo</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="email_hint">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="get_started">Get Started</string>
    <string name="user_type_prompt">Who are you?</string>
    <string name="user_data_string">We like to know who\'s submitting.\nRead more about how we use your data.</string>
    <string name="about_you_string">Tell us about yourself.</string>
    <string name="data_statement_uri">http://www.fractracker.org/data-statement/</string>
    <string name="unknown_issue">Issue Type</string>
    <string name="log_tag">VILog</string>
    <string name="package_name">com.viableindustries.waterreporter</string>
    <string name="title_activity_well_detail">WellDetailActivity</string>
    <string name="waterreporter_orange">#F9AC00</string>
    <string name="waterreporter_green">#72C224</string>
    <string name="activity_prompt">Pollution Report</string>
    <string name="title_prompt">Title</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="base_blue">#14ABE0</string>
    <string name="response_type">token</string>
    <string name="client_id">SG92Aa2ejWqiYW4kI08r6lhSyKwnK1gDN2xrryku</string>
    <string name="redirect_uri">https://www.waterreporter.org/authorize</string>
    <string name="scope">user</string>
    <string name="state">json</string>
    <string name="existing_email">The email you provided is already associated with an account. If you\'re already a member, please try logging in.</string>
    <string name="invalid_credentials">We couldn\'t identify you. Please double-check your email and password.</string>
    <string name="reset_instructions">Enter the email address that you used to register with Water Reporter. If we find a match, you\'ll receive an email with instructions for resetting your password.</string>
    <string name="reset_success">We sent you an email with a password reset link. Please come back and log in after you change your password.</string>
    <string name="reset_error">We couldn\'t find you in Water Reporter. Please double-check the email that you entered and make sure that it\'s the same one you used to register.</string>
    <string name="post_instruction">To get started, tap on the camera and add a photo or paste a link into the comment box.</string>
    <string name="comment_hint">Write a few words&#8230;</string>
    <string name="post_location_prompt">Confirm location</string>
    <string name="post_groups_prompt">Share with your groups.</string>
    <string name="saving">Please sit tight while we save your report&#8230;</string>
    <string name="post_received">Great! Your report was successfully broadcast on Water Reporter.</string>
    <string name="sending_post">Sending post&#8230;</string>
    <string name="view_members">View members</string>
    <string name="view_groups">View groups</string>
    <string name="view_users">View users</string>
    <string name="view_watersheds">View watersheds</string>
    <string name="view_campaigns">View campaigns</string>
    <string name="view_full_profile">View full profile</string>
    <string name="action_edit_post">Edit post</string>
    <string name="action_delete_post">Delete post</string>
    <string name="action_share_post">Share post</string>
    <string name="action_get_directions">Get directions</string>
    <string name="action_download_image">Save image</string>
    <string name="filter_all">All posts</string>
    <string name="filter_actions">Posts with actions</string>
    <string name="filter_likes">Posts with likes</string>
    <string name="filter_comments">Posts with comments</string>
    <string name="filter_stories">Posts with shared links</string>
    <string name="filter_category_actions">Actions</string>
    <string name="filter_category_likes">Likes</string>
    <string name="filter_category_comments">Comments</string>
    <string name="filter_category_stories">Shares</string>
    <string name="find_location">Find an address.</string>
    <string name="form_field_label">Form field label</string>
    <string name="form_field_instructions">Form field instructions</string>
    <string name="form_prompt_text">%s is collecting more information as part of this campaign. Would you like to contribute?</string>
    <string name="decline_form">Not now</string>
    <string name="accept_form">Yes</string>
    <string name="default_form_thank_you_message">Thanks for pitching in %s! We really appreciate your help.</string>
    <string name="dismiss_form_thank_you_message">OK, got it!</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
    <string name="title_activity_registration">Sign Up</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile_basic">ProfileBasicActivity</string>
    <string name="title_activity_registration_fork">RegistrationForkActivity</string>
    <string name="terms_title">Terms and Conditions</string>
    <string name="terms_intro">By using Water Reporter for Android, you agree to be bound by the following terms and conditions (\"Terms of Service\").</string>
    <string name="basic_terms_title">Basic Terms</string>
    <string name="general_conditions_title">General Conditions</string>
    <string name="term_one">&#8226; You must be 13 years and older to use this app.</string>
    <string name="term_two">&#8226; You are responsible for any activity that occurs under your user account.</string>
    <string name="term_three">&#8226; You are responsible for keeping your password secure.</string>
    <string name="term_four">&#8226; You must not abuse, harass, threaten, invade the privacy of, or intimidate other Water Reporter members or staff.</string>
    <string name="term_five">&#8226; You may not use Water Reporter for any illegal or unauthorized purpose. International members agree to comply with all local laws regarding online conduct and acceptable content.</string>
    <string name="term_six">&#8226; You are solely responsible for your conduct and any data, text, information, screen names, graphics, photos, profiles, links (\"Content\") that you submit, post, and display on Water Reporter.</string>
    <string name="term_seven">&#8226; You must not modify, adapt or hack Water Reporter or modify another website so as to falsely imply that it is associated with Water Reporter.</string>
    <string name="term_eight">&#8226; You must not create or send unwanted notes to any members of the Water Reporter community that would be considered to be spam.</string>
    <string name="term_nine">&#8226; You must not transmit any worms or viruses or any code of a destructive nature.</string>
    <string name="term_ten">&#8226; You must not, in the use of Water Reporter, violate any laws in your jurisdiction (including but not limited to copyright laws).</string>
    <string name="term_eleven">&#8226; Violation of any of these agreements will result in the termination of your Water Reporter account. While Water Reporter prohibits malicious or harmful conduct and content, you understand and agree that Water Reporter cannot be responsible for the Content posted by its members and you nonetheless may be exposed to such materials and that you use Water Reporter at your own risk.</string>
    <string name="condition_one">&#8226; We reserve the right to modify or terminate Water Reporter for any reason, without notice at any time.</string>
    <string name="condition_two">&#8226; We reserve the right to alter these Terms of Service at any time. If the alterations constitute a material change to the Terms of Service, we will notify you via the email address associated with your Water Reporter account in a timely manner.</string>
    <string name="condition_three">&#8226; What constitutes a \"material change\" will be determined at our sole discretion, in good faith and using common sense and reasonable judgement.u must not abuse, harass, threaten, invade the privacy of, or intimidate other Water Reporter members or staff.</string>
    <string name="condition_four">&#8226; We reserve the right to refuse service to anyone for any reason at any time.</string>
    <string name="condition_five">&#8226; You own all of the content that you share on Water Reporter. You give us permission to use, store, and share the member content you post on Water Reporter. You may request that your account be deleted at any time, though if you\'ve shared your content publicly, the content may persist on third party sites until it is deleted.</string>
    <string name="condition_six">&#8226; You grant Water Reporter a non-exclusive, transferable, sub-licensable, royalty-free, worldwide license to use, copy, publicly perform or display, distribute, modify, translate, and create derivative works of any content you post on Water Reporter solely for the purpose for which your content was submitted or made available. This license ends when your account or content are deleted.</string>
    <string name="condition_seven">&#8226; We may, but have no obligation to, remove content that we determine in our sole discretion are unlawful, offensive, threatening, libelous, defamatory, obscene, invades the privacy of others, or otherwise objectionable or violates any party\'s intellectual property or these Terms of Service.</string>
    <string name="condition_eight">&#8226; We reserve the right to remove any content that we feel may include personally identifiable documentation or scans of documents issued by banks or governments (social security numbers, passport numbers, credit card numbers, drivers licenses, etc.).</string>
    <string name="condition_nine">&#8226; We reserve the right to contact you occasionally via email to share system-wide updates regarding new features, releases, and community news.</string>
</resources>