<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/campaignFormPromptBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/formPromptText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/form_prompt_text"
        android:textSize="@dimen/base_text"
        android:textStyle="normal" />

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="0.5dp"-->
    <!--android:background="@color/gray_232" />-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/acceptForm"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/accept_form"
            android:textAllCaps="true"
            android:textColor="@color/splash_blue" />

        <Button
            android:id="@+id/declineForm"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/acceptForm"
            android:text="@string/decline_form"
            android:textAllCaps="true" />

        <!--<View-->
        <!--android:layout_width="0.5dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@color/gray_232" />-->

    </RelativeLayout>

</LinearLayout>