<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.viableindustries.waterreporter.PasswordResetActivity">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:background="@drawable/water_reporter_logo"
        android:contentDescription="Water Reporter logo"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/reset_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/success_text"
        android:padding="10dp"
        android:text="@string/reset_success"
        android:textSize="@dimen/base_text"
        android:visibility="gone" />

    <TextView
        android:id="@+id/reset_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/error_text"
        android:padding="10dp"
        android:text="@string/reset_error"
        android:textSize="@dimen/base_text"
        android:visibility="gone" />

    <TextView
        android:id="@+id/prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/reset_instructions"
        android:textSize="@dimen/base_text" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textSize="@dimen/base_text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/gray_224" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_button"
        android:gravity="center"
        android:onClick="requestReset"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="Submit"
        android:textColor="@color/white"
        android:textSize="@dimen/base_text" />

</LinearLayout>
